docs/tests/parser/types/valid/TypeVectorSize9.src
fn void test() {
    let vec<9> v;
}
