docs/tests/parser/types/invalid/TypeVectorMissingCloseAngle.src
fn void test() {
    let vec<3 v;
}
